[package]
name = "mosh-server-upnp"
version = "0.0.1"
authors = ["arcnmx"]

description = "mosh-server wrapper for NATs"
keywords = ["mosh", "mosh-server", "NAT", "UPnP"]

repository = "https://github.com/arcnmx/mosh-server-upnp"
readme = "README.md"
license = "MIT"

[dependencies]
igd = "^0.5.1"
get_if_addrs = "^0.4.0"
