[package]
name = "mosh-server-upnp"
version = "0.2.0"
authors = ["arcnmx"]
edition = "2018"

description = "mosh-server wrapper for NATs"
keywords = ["mosh", "mosh-server", "NAT", "UPnP"]

repository = "https://github.com/arcnmx/mosh-server-upnp"
readme = "README.md"
license = "MIT"

[dependencies]
igd = "^0.11.0"
get_if_addrs = "^0.5.3"
